--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,8 +49,8 @@ jobs:
       - name: Set Image tag 
         id: image-tag
         run: |
-          echo "tags=${ env.GCP_REGION }-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${ env.ARTIFACT_REGISTRY }/demo:latest" >> $GITHUB_OUTPUT
-          echo "tags-sha=${ env.GCP_REGION }-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${ env.ARTIFACT_REGISTRY }/demo:${{ github.sha }}" >> $GITHUB_OUTPUT
+          echo "tags=${ GCP_REGION }-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${ ARTIFACT_REGISTRY }/demo:latest" >> $GITHUB_OUTPUT
+          echo "tags-sha=${ GCP_REGION }-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${ ARTIFACT_REGISTRY }/demo:${{ github.sha }}" >> $GITHUB_OUTPUT
       
       - name: Build Docker Image
         run: |
@@ -63,13 +63,13 @@ jobs:
       
       - name: Deploy to cloud run
         run: |
-          gcloud run deploy demo --image ${{ steps.image-tag.outputs.tag }} --region ${ env.GCP_REGION } --platform managed --allow-unauthenticated --port 8080 \
+          gcloud run deploy demo --image ${{ steps.image-tag.outputs.tag }} --region ${ GCP_REGION } --platform managed --allow-unauthenticated --port 8080 \
           --cpu 1 --memory 512Mi --max-instances 5 --timeout 300s --quiet
       
       - name: Get URL 
         id: get-url
         run: |
-          URL=$(gcloud run services describe demo --region { $env.GCP_REGION } --platform managed --format='value(status.url)')
+          URL=$(gcloud run services describe demo --region { $GCP_REGION } --platform managed --format='value(status.url)')
           echo "URL=$URL" >> $GITHUB_OUTPUT
       
       - name: Verify Deployment
