--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ steps.image-tag.outputs.tag }} -t ${{ steps.image-tag.outputs.tag_sha }} -f Dockerfile .
+          docker build --tag ${{ steps.image-tag.outputs.tag }} --tag ${{ steps.image-tag.outputs.tag_sha }} --file Dockerfile .
       
       - name: Push Docker Image
         run: |
@@ -69,7 +69,7 @@ jobs:
       - name: Deploy to cloud run
         run: |
           gcloud run deploy demo --image ${{ steps.image-tag.outputs.tag }} --region ${GCP_REGION} --platform managed --allow-unauthenticated --port 8000 \
-          --cpu 1 --memory 512Mi --max-instances 5 --timeout 300s --quiet
+          --cpu 1 --memory 512Mi --max-instances 5 --timeout 500s --quiet
       
       - name: Get URL 
         id: get-url
